@@ -84,6 +84,7 @@
     	<xi:include href="xml/gloadableicon.xml"/>
     	<xi:include href="xml/gthemedicon.xml"/>
     	<xi:include href="xml/gemblemedicon.xml"/>
+    	<xi:include href="xml/gemblem.xml"/>
     </chapter>
     <chapter id="utils">   
     	<title>Utilities</title>
