@@ -13,6 +13,8 @@ g_data_stream_newline_type_get_type
 g_desktop_app_info_get_type
 g_desktop_app_info_lookup_get_type
 g_drive_get_type
+g_emblemed_icon_get_type
+g_emblem_get_type
 g_file_attribute_info_flags_get_type
 g_file_attribute_status_get_type
 g_file_attribute_type_get_type
